# vbi-claims-navigator

./: .gitignore  Dockerfile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  requirements.txt  seed_db.py
alembic/: env.py
alembic/versions/: 001_initial_migration.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  deps.py  routes.py  schemas.py
app/core/: config.py
app/db/: base.py  session.py
app/models/: __init__.py  claim.py  client.py  user.py
app/services/: client.py  finance.py  llm.py  ocr.py  rag.py
app/tests/: __init__.py  conftest.py  test_api.py  test_llm.py  test_rag.py
app/tests/fixtures/: sample_docs.txt
app/utils/: audit.py  security.py
app/workers/: __init__.py  runner.py  tasks.py
docs/: system_prompt.txt
